Add sound and jump scare mechanic.